# onedrive-personal-sdk

./: .gitignore  =  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yaml
onedrive_personal_sdk/: __init__.py  client.py  const.py  exceptions.py  large_file_upload.py  models.py
onedrive_personal_sdk/clients/: base.py  client.py  large_file_upload.py
onedrive_personal_sdk/models/: items.py  upload.py
onedrive_personal_sdk/util/: quick_xor_hash.py
tests/: test_items_serialization.py  test_quick_xor_hash.py
