[project]
name = "onedrive-personal-sdk"
version = "0.0.1a4"
license = {text = "MIT License"}
description = "A package to interact with the Microsoft Graph API for personal OneDrives."
readme = "README.md"
authors = [{name = "Josef Zweck", email = "josef@zweck.dev"}]
maintainers = [{name = "Josef Zweck", email = "josef@zweck.dev"}]
keywords = ["OneDrive", "Graph", "api", "async", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp >= 3.8.1",
    "mashumaro >= 3.9.1",
]
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/zweckj/onedrive-personal-sdk"
Repository = "https://github.com/zweckj/onedrive-personal-sdk"
Documentation = "https://github.com/zweckj/onedrive-personal-sdk"

[project.optional-dependencies]
dev = [
    "covdefaults == 2.3.0",
    "coverage == 7.6.7",
    "syrupy == 4.7.2",
    "pytest == 8.3.3",
    "pytest-asyncio == 0.24.0",
    "pytest-cov == 6.0.0",
    "aioresponses == 0.7.7",
]